--- a/index-ar.html
+++ b/index-ar.html
@@ -695,7 +695,8 @@
 </div>
 
 <footer>
-    محمد عمارة - مشروع الخردة © 2026 – دليل مستخدم بوابة الموردين<br>
+    جيزة سيستمز – مشروع الخردة © 2026 – دليل مستخدم بوابة الموردين<br>
+    إعداد فريق ضمان الجودة (QC)<br>
     للدعم، يرجى التواصل مع مسؤول النظام
 </footer>
 
