--- a/index.html
+++ b/index.html
@@ -681,7 +681,8 @@
 </div>
 
 <footer>
-    Mohamed Omara - Scrap Project © 2026 – Supplier Portal User Guide<br>
+    Giza Systems – Scrap Project © 2026 – Supplier Portal User Guide<br>
+    Prepared by QC Team<br>
     For support, please contact your system administrator
 </footer>
 
